# fraud-mcp-test-framework

./: .env.example  .gitignore  AGENTS.md  README.md  main.py  pyproject.toml  pytest.ini
.claude/: AGENTS.md
.github/workflows/: ci.yml
reports/: evidence.jsonl  governance_summary.json  pytest-connection-local.html  pytest-contract-local.html  pytest-governance-local.html  pytest-offline-local.html  pytest-safety-local.html  pytest-workflow-local.html
reports/baselines/: live_mcp_behaviour.json  static_tool_contracts.json
reports/evidence/: connection_health_check.json  connection_initialize.json  rbac_analyst_l1_create_fraud_case.json  rbac_analyst_l1_escalate_case.json  rbac_auditor_create_fraud_case.json  rbac_auditor_escalate_case.json  rbac_l1_escalate_case.json  safety_escalated_case_summary.json  safety_incomplete_evidence_summary.json  security_invalid_role_get_transaction.json  security_missing_role_escalate_case.json  security_permission_failure_auditability.json  tool_discovery.json  tool_invocation_create_fraud_case.json  tool_invocation_escalate_case.json  tool_invocation_generate_investigation_summary.json  tool_invocation_get_case_status.json  tool_invocation_get_transaction.json  tool_invocation_score_transaction_risk.json  tool_invocation_search_customer.json  workflow_case_lifecycle.json  workflow_invalid_case_escalation.json  workflow_repeated_escalation.json  workflow_repeated_status_consistency.json  workflow_state_created_to_escalated.json  workflow_summary_latest_state.json  workflow_wrong_order_safety.json
tests/: __init__.py  conftest.py
(+61 files in other folders)
