[project]
name = "fraud-mcp-test-framework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "jsonschema>=4.26.0",
    "pydantic>=2.13.4",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest-html>=4.2.0",
    "ruff>=0.15.13",
]
